@@ -1,0 +1,44 @@
+zfile(7)
+========
+
+NAME
+----
+zfile - helper functions for working with files.
+
+SYNOPSIS
+--------
+----
+//  Delete file. Does not complain if the file is absent
+int
+    zfile_delete (char *filename);
+
+//  Make directory (maximum one level depending on OS)
+int
+    zfile_mkdir (char *dirname);
+
+//  Return 1 if file exists, else zero
+int
+    zfile_exists (char *filename);
+----
+
+DESCRIPTION
+-----------
+
+The zfile class provides methods to work with files.
+
+
+EXAMPLE
+-------
+.From zfile_test method
+----
+    int rc = zfile_delete ("no such file");
+    assert (rc == 0);
+
+    rc = zfile_exists ("no such file");
+    assert (rc == FALSE);
+
+----
+
+SEE ALSO
+--------
+linkczmq:czmq[7]
